# cpp---te

./: .gitignore  cstring.cpp  cstring.sh  funcref.sh  ref_method.sh
algos/: algos.cpp  create.hpp  inerters.cpp  remove.cpp  sort.cpp  streams.cpp
arrays/: arr.cpp
classes/: Test.cpp  cls1.cpp
collections/: bool_vector.cpp  coll.cpp  coll_wth_refs_and_hasing.cpp  constructors.cpp  fwd_list.cpp  interate.cpp  iter.cpp  iterators.cpp  list.cpp  ordered_containers.cpp  print_coll.hpp  string-coll.cpp  unordered_containers.cpp  vectors.cpp
concurrency/: advanced_lock.cpp  mutex1.cpp
conversion2/: Makefile  conversion.cpp  length.cpp  length.hpp
cstring1/: cstring2.cpp  cstring2.sh  dyn_alloc.cpp  dyn_alloc.sh  ref.cpp  ref.sh  ref_method.cpp
defines/: Makefile  def.cpp
function_objects/: binders.cpp  bitsets.cpp  decls.hpp  for_each_return.cpp  func.cpp  func_obj1.cpp  func_obj1.hpp  heaps.cpp  interceptor1.cpp  interceptor1.hpp  perf1.cpp  permutate.cpp  queues.cpp  sort1.cpp
headers/: constants.cpp
iostreams/: file1.cpp  file2.txt  mainp.cpp  manip_templates.hpp  stream1.cpp  stream_redir.cpp  stringstream1.cpp
iterators/: adapters.cpp  custom.cpp  out.cpp
locales/: locales1.cpp  (+1 more)
preprocessing+compilation+linking/: CMakeLists.txt  calc.cpp  hello-world.ii  print.cpp  print.hpp
prj1/: .cproject  .project  CMakeLists.txt  Makefile  main.cpp  main2  main2.cpp  multiply.cpp  multiply.hpp  workspace.code-workspace
prj1/collections/: ListEg.cpp  ListEg.hpp  VectorEg.cpp  VectorEg.hpp  main.cpp
prj1/heap/: constructors.cpp  constructors.hpp  main.cpp
(+23 files in other folders)
